was getting wrong expected title

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,16 @@
             <version>5.9.2</version>
         </dependency>
 
+        <!--If you want to get rid of SLF4J Failed to load message from the console -->
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.16</version>
+            <scope>test</scope>
+        </dependency>
+
+
 
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
